# cli-n8n

./: .gitignore  CHANGELOG.md  LICENSE  N8N.md  PUBLISHING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
cli_anything/n8n/: README.md  __init__.py  __main__.py  n8n_cli.py
cli_anything/n8n/core/: credentials.py  executions.py  expressions.py  fixers.py  nodes.py  project.py  scaffolds.py  session.py  tables.py  tags.py  templates.py  variables.py  versions.py  workflows.py
cli_anything/n8n/skills/: SKILL.md
cli_anything/n8n/tests/: TEST.md  test_core.py  test_full_e2e.py
cli_anything/n8n/utils/: n8n_backend.py  repl_skin.py
